add Staff and add Patient Done

--- a/Final Try/todo.txt
+++ b/Final Try/todo.txt
@@ -4,3 +4,9 @@ add elements to add staff window
 create 2 more windows to update and delete
 clone add staff window for add patient
 create 2 more windows for update and delete patient.
+
+staff report
+patient report
+inventory report
+billing report
+appointments report
